# ProYouTubers-Dubbing-Studio

./: ADD_THIS_1_download_endpoints.py  ADD_THIS_2_copy_call.py  Makefile  Modal_cells.md  README.md  fix_css.py  loog.txt  modal_bulk_processor.py  temp_index_old.html
OLD_VERSION_CODE_I_WILL_DELETE_SOON/ProYouTubers-Dubbing-Studio-main/: .env.example  .gitignore
OLD_VERSION_CODE_I_WILL_DELETE_SOON/ProYouTubers-Dubbing-Studio-main/apps/backend/: check_gpu.py
OLD_VERSION_CODE_I_WILL_DELETE_SOON/ProYouTubers-Dubbing-Studio-main/apps/backend/services/tts/models/chatterboxModel/: pyproject.toml  runner.py
apps/: pipeline_runner.py
apps/backend/: requirements_god_tier.txt  setup_god_tier.bat
apps/backend/services/: pipeline_manager.py
apps/backend/services/asr/: glm_runner.py  pyproject.toml
apps/backend/services/enhancement/: resemble_runner.py
apps/backend/services/fx/: chatterbox_runner.py
apps/backend/services/llm/: deepseek_runner.py
apps/backend/services/safety/: age_gender_scanner.py
apps/backend/services/separation/: roformer_runner.py
apps/backend/services/tts/: f5_runner.py  kokoro_runner.py
apps/backend/services/vad/: silero_v6_runner.py
apps/backend/services/vc/: applio_runner.py
apps/backend/services/vision/: glm_vision_runner.py
apps/frontend/: god-tier-controls.html  index.html
apps/frontend/scripts/: app.js  gpu-mode-display.js  provider-toggle.js
apps/frontend/styles/: bulk-progress.css  downloads-enhancements.css  god-tier.css  main.css  main_backup.css  main_fixed.css  media-inputs.css
(+31 files in other folders)
