[project]
name = "chatterboxmodel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [

    "chatterbox-tts",
    "common-schemas",
    "torch",
    "torchaudio",
    "ml-dtypes>=0.5.0"
]

[tool.uv.sources]
common-schemas = { path = "../../../../libs/common-schemas" , editable = true}

[tool.uv.extra-build-dependencies]
pkuseg = ["numpy"]
